# portainer-stack-deploy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh
.github/workflows/: CI.yml  test.yml
docker/: Dockerfile
src/: main.rs
