[package]
name = "portainer-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = ["json"] }
tokio = { version = "1.9.0", default-features = false, features = ["net", "time","rt-multi-thread", "macros", ] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"